--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -51,12 +51,12 @@ catalog:
   jest: 29.7.0
   jest-cli: 29.7.0
   local-web-server: 5.4.0
-  next: 15.5.6
+  next: 15.5.7
   prettier: 3.6.2
   puppeteer: 24.15.0
   playwright: 1.56.1
-  react: 19.2.0
-  react-dom: 19.2.0
+  react: 19.2.1
+  react-dom: 19.2.1
   rollup-plugin-string: 3.0.0
   rollup-plugin-node-polyfills: 0.2.1
   typedoc: 0.28.13
@@ -81,5 +81,9 @@ minimumReleaseAgeExclude:
   - '@angular-devkit/*'
   - '@angular/*'
   - ng-packagr
-  - '@react-router/*'
+  - '@next/*'
+  - next
+  - react
+  - react-dom
   - react-router
+  - '@react-router/*'
