--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -43,8 +43,8 @@ catalog:
   '@types/react-dom': 19.2.3
   '@vitejs/plugin-react': 5.1.1
   coveo.analytics: 2.30.49
-  cypress: 13.7.3
-  cypress-repeat: 2.3.9
+  cypress: 13.17.0
+  cypress-repeat: 2.3.10
   dayjs: 1.11.13
   esbuild: 0.25.8
   exponential-backoff: 3.1.2
@@ -66,7 +66,6 @@ catalog:
   '@vitest/coverage-v8': 4.0.10
   '@vitest/browser-playwright': 4.0.10
 
-
 publicHoistPattern:
   - '*eslint*'
   - '*prettier*'
@@ -87,3 +86,4 @@ minimumReleaseAgeExclude:
   - react-dom
   - react-router
   - '@react-router/*'
+  - '@cypress/request'
